# local-model-endpoint

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  README.md  TEMPLATE_FRICTION.md  Taskfile.yml  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  dependabot-lockfile-sync.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: __init__.py  __main__.py  main.py
apps/backend/app/api/: __init__.py  _constants.py  app_state.py  deps.py  errors.py  exception_handler_registry.py  exception_handlers.py  health_router.py  lifespan_resources.py  middleware.py  request_id_middleware.py  router_registry.py  state.py
apps/backend/app/core/: __init__.py  config.py  logging.py
apps/backend/app/exceptions/: __init__.py  base.py
apps/backend/app/exceptions/_generated/: __init__.py  _registry.py  adapter_connection_failure_error.py  adapter_connection_failure_params.py  conflict_error.py  http_error.py  inference_timeout_error.py  inference_timeout_params.py  internal_error.py  method_not_allowed_error.py  model_capability_not_supported_error.py  model_capability_not_supported_params.py  not_found_error.py  queue_full_error.py  queue_full_params.py  rate_limited_error.py  rate_limited_params.py  registry_not_found_error.py  registry_not_found_params.py  validation_failed_error.py  validation_failed_params.py
apps/backend/app/features/: __init__.py
apps/backend/app/features/inference/: __init__.py
apps/backend/app/features/inference/model/: __init__.py  _caps.py  _validators.py  audio_content.py  caps.py  content_part.py  dos_caps.py  finish_reason.py  image_content.py  message.py  model_params.py  ollama_chat_result.py  ollama_translation.py  text_content.py
apps/backend/app/features/inference/repository/: __init__.py  ollama_client.py  ollama_translation.py
apps/backend/app/features/inference/schemas/: __init__.py  inference_request.py  inference_response.py  response_metadata.py
apps/backend/app/schemas/: __init__.py  _constants.py  error_body.py  error_detail.py  error_response.py  health_response.py  problem_details.py  problem_extras.py  validation_error_detail.py  wire_constants.py
apps/backend/architecture/: import-linter-contracts.ini
apps/backend/tests/: __init__.py  _helpers.py  _settings_factory.py  conftest.py
apps/backend/tests/contract/: __init__.py  conftest.py  test_health_route_publication.py  test_openapi_document_validity.py  test_openapi_shape.py  test_problem_details_contract.py  test_problem_details_shape.py  test_schemathesis.py
apps/backend/tests/integration/: __init__.py  conftest.py  test_app_factory.py  test_exception_handler_chain.py  test_main.py  test_problem_details.py
apps/backend/tests/integration/api/: __init__.py  test_error_handler.py  test_health.py  test_health_router.py  test_lifespan_resources.py  test_request_id_middleware.py
apps/backend/tests/integration/features/: __init__.py
apps/backend/tests/integration/features/inference/: __init__.py  test_chat.py  test_lifecycle.py
apps/backend/tests/integration/features/inference/repository/: __init__.py  test_ollama_client.py
apps/backend/tests/unit/: __init__.py  test_filterwarnings_anyio_suppression.py  test_filterwarnings_unraisable_suppression.py  test_no_test_classes_guard.py  test_pytest_asyncio_config.py
apps/backend/tests/unit/api/: __init__.py  test_deps.py  test_exception_handler_registry.py  test_exception_handlers.py
apps/backend/tests/unit/core/: __init__.py  conftest.py  test_config.py  test_logging.py
apps/backend/tests/unit/exceptions/: __init__.py  test_base.py  test_domain_errors.py  test_error_handler.py  test_errors_yaml_drift_guard.py  test_errors_yaml_invariants.py  test_handwritten_files_drift_guard.py  test_handwritten_files_invariant.py  test_params_frozen_drift_guard.py  test_params_frozen_invariant.py  test_problem_extras_drift_guard.py  test_registry.py  test_screaming_snake_pattern_drift_guard.py  test_title_max_chars_drift_guard.py
apps/backend/tests/unit/features/: __init__.py
apps/backend/tests/unit/features/inference/: __init__.py  conftest.py  test_audio_content.py  test_content_part.py  test_image_content.py  test_inference_request.py  test_inference_response.py  test_message.py  test_model_params.py  test_ollama_chat_result.py  test_openapi_shape.py  test_request_id_fixture_drift_guard.py  test_response_metadata.py  test_text_content.py
apps/backend/tests/unit/features/inference/model/: __init__.py  test_audio_content.py  test_content_part.py  test_image_content.py  test_message.py  test_model_params.py  test_ollama_chat_result.py  test_ollama_translation.py  test_text_content.py  test_value_objects_frozen_drift_guard.py
apps/backend/tests/unit/features/inference/repository/: __init__.py  test_ollama_client.py  test_ollama_translation.py
apps/backend/tests/unit/features/inference/schemas/: __init__.py  test_inference_request.py  test_inference_response.py  test_inference_schema_shapes.py  test_response_metadata.py
apps/backend/tests/unit/infra/: __init__.py
apps/backend/tests/unit/infra/launchd/: __init__.py  test_ollama_plist.py
apps/backend/tests/unit/launchd/: test_ollama_plist.py
apps/backend/tests/unit/schemas/: __init__.py  test_health_response.py  test_problem_details.py  test_problem_extras.py  test_validation_error_detail.py
apps/frontend/: package.json
docs/: ai-guide.md  architecture.md  automerge.md  bootstrap-decisions.md  brainstorm.md  conventions.md  decisions.md  disambiguated-idea.md  disambigued-idea.md  features.md  ollama-launchd.md  runbook.md  testing.md
graphs/LIP/: LIP-E001-F001.md  LIP-E001-F002.md  LIP-E001.md  LIP-E002-F001.md  LIP-E002-F002.md  LIP-E002-F003.md  LIP-E002.md  LIP-E003-F001.md  LIP-E003-F002.md  LIP-E003-F003.md  LIP-E003.md  LIP-E004-F001.md  LIP-E004-F002.md  LIP-E004-F003.md  LIP-E004-F004.md  LIP-E004.md  LIP-E005-F001.md  LIP-E005-F002.md  LIP-E005-F003.md  (+8 more)
scripts/: check_taskfile.sh  pre_push_unit_tests.sh
(+22 files in other folders)
