[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "lip-backend"
version = "0.1.0"
description = "Local Inference Provider — FastAPI service wrapping a local Ollama daemon"
requires-python = ">=3.13,<3.14"
# Versions are pinned exactly: CI runs ``uv sync --frozen`` so the lockfile
# pins the actual environment; the manifest values are the floor that
# ``uv lock`` resolves against. Pinning to ``==`` makes the policy
# self-evident and removes the gap where ``uv sync`` (without ``--frozen``)
# on a fresh clone could pull a newer version than CI.
dependencies = [
    "fastapi==0.136.1",
    "starlette==1.0.0",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    # Pinned to ``==2.11`` (no trailing ``.0``) to match what PyPI publishes;
    # PEP 440 normalizes both forms to the same release, but the manifest
    # string drifts from the resolved lockfile string when written as
    # ``2.11.0`` and confuses grep-based version audits.
    "import-linter==2.11",
    # Pyright minor releases ship new strict-mode checks; pinning to == means
    # a strict-mode semantic change requires a deliberate Dependabot PR.
    "pyright==1.1.409",
    "schemathesis==4.16.1",
    "pip-audit==2.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — docs not enforced at module level
    "ANN401",  # Any in **kwargs — needed for generic base classes
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # single-line implicit string concat — conflicts with formatter
    "FIX002",  # line contains TODO
    "TD003",   # missing issue link for TODO
    "UP046",   # Generic[T] syntax — TypeVar approach is clearer for complex generics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ANN",     # type annotations relaxed in tests
    "PLR2004", # magic values allowed in tests
    "PLC0415", # imports inside functions allowed in test fixtures
    "E501",    # long docstrings in tests
    "SLF001",  # tests legitimately inspect single-underscore internals of the unit under test
    "PT012",   # pytest.raises blocks may contain multiple statements when testing async context managers
    "EM101",   # string-literal exception args are fine in throwaway test scaffolding
]
"app/exceptions/_generated/**/*.py" = [
    "E501",    # generated code may have long lines
    "I001",    # generated imports may not be sorted
    "RUF022",  # generated __all__ may not be sorted
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath is intentionally not set: the project is installed editable via
# ``[tool.hatch.build.targets.wheel] packages = ["app"]`` (handled by ``uv
# sync``), so ``import app`` resolves through the install metadata in every
# invocation path (CI, pre-push, ``task``, direct ``uv run pytest``). Setting
# pythonpath = ["."] would shadow the editable install in some invocation
# paths and is "two ways to do the same thing" — drop it.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# --strict-markers/-config fails the run on unknown markers or unknown
# pytest config keys (catches typos that would otherwise no-op).
# filterwarnings turns first-party DeprecationWarnings into errors so
# upstream deprecations land as failed CI rather than silent log noise.
addopts = [
    "-q",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
# An xfail that unexpectedly passes is a hard failure (forces the author
# to remove the marker rather than leaving stale xfails in the suite).
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:hypothesis",
    "ignore::DeprecationWarning:schemathesis",
    # anyio's memory streams emit ResourceWarnings on GC during pytest's
    # asyncio-teardown sweep; not a LIP bug. Filter so they don't get
    # elevated to test failures by `error`. The unraisable-exception
    # filter is scoped to the pytest module that emits it on
    # asyncio-teardown so it does not silence "coroutine was never awaited"
    # bugs across the rest of the suite.
    "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
    "ignore::ResourceWarning:anyio",
]
# No ``markers = [...]`` block — empty list is a no-op under
# ``--strict-markers`` (set in addopts above), which already rejects unknown
# markers. Re-add ``markers = ["slow: ..."]`` etc. only when a test actually
# applies the marker.
# Forbid test classes — CLAUDE.md sacred rule "Never write a test class".
python_classes = ["NoTestClassesAllowed"]
# Pin discovery patterns to match CLAUDE.md naming convention
# (`test_<unit>_<scenario>_<expected>`). Default pytest also picks up
# `*_test.py`, which would let a contributor land a misnamed file
# silently; pinning explicitly locks the convention mechanically.
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/exceptions/_generated/**",
    "**/__init__.py",
    # `python -m app` launcher — calls uvicorn.run; cannot be unit-tested
    # without spawning a subprocess. Drop from coverage so the gate
    # measures testable code only.
    "app/__main__.py",
]

[tool.coverage.report]
# Baseline measured at 95% on 2026-04-28 (LIP-E003-F001 landed). Set 5pt
# below to leave room for transient regressions during feature-dev
# without flapping the gate. Bump back up after each feature lands and
# stabilizes its coverage.
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # Protocol method bodies + ``...`` stubs.
    "\\.\\.\\.\\s*$",
    # Module entrypoint guards (re-bites if app/__main__.py is ever de-omitted).
    "if __name__ == .__main__.:",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app"]
