[build-system]
# Pinned to ``==`` per CLAUDE.md "all deps pinned" rule. Build-system
# requires count as deps in the policy sense — Dependabot's pip ecosystem
# scans this line for updates only when it's a pin, not a range.
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "lip-backend"
version = "0.1.0"
description = "Local Inference Provider — FastAPI service wrapping a local Ollama daemon"
license = "MIT"
authors = [{ name = "Cosmin Neamtiu" }]
requires-python = ">=3.13,<3.14"
# Versions are pinned exactly: CI runs ``uv sync --frozen`` so the lockfile
# pins the actual environment; the manifest values are the floor that
# ``uv lock`` resolves against. Pinning to ``==`` makes the policy
# self-evident and removes the gap where ``uv sync`` (without ``--frozen``)
# on a fresh clone could pull a newer version than CI.
dependencies = [
    "fastapi==0.136.1",
    "starlette==1.0.0",
    # uvicorn's explicit transitive subset is pinned here (rather than via
    # the ``uvicorn[standard]`` convenience extra) so the dep audit and
    # Dependabot can both see exactly which transitives are load-bearing.
    # ``websockets`` (also pulled by ``[standard]``) is intentionally NOT
    # listed — LIP has no WebSocket routes (CLAUDE.md "Conventions
    # (planned, not yet implemented) — WebSockets"). ``python-dotenv``
    # IS in the lockfile (it's a required runtime dep of
    # ``pydantic-settings``) but the project never imports it: settings
    # only loads ``.env`` lazily when the ``env_file=`` source is
    # configured, which it is via ``SettingsConfigDict(env_file=...)``.
    # The ``no dotenv import`` claim is a code-side discipline, not a
    # lockfile-absence claim.
    "uvicorn==0.46.0",
    "httptools==0.7.1",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    # Pinned to ``==2.11`` (no trailing ``.0``) to match what PyPI publishes;
    # PEP 440 normalizes both forms to the same release, but the manifest
    # string drifts from the resolved lockfile string when written as
    # ``2.11.0`` and confuses grep-based version audits.
    "import-linter==2.11",
    # Pyright minor releases ship new strict-mode checks; pinning to == means
    # a strict-mode semantic change requires a deliberate Dependabot PR.
    "pyright==1.1.409",
    "pip-audit==2.10.0",
    # Backend tests parse errors.yaml directly to assert invariants between
    # the YAML source-of-truth and the generated exception classes. The
    # backend has no runtime dependency on YAML (only the codegen does), so
    # pyyaml is dev-only here.
    "pyyaml==6.0.3",
    # Externally-maintained PyPI stubs for PyYAML. Pyright's bundled
    # typeshed-fallback already covers ``yaml`` (PyYAML ships no
    # ``py.typed``), but ``types-pyyaml`` tracks PyYAML releases on a
    # faster cadence than pyright's vendored typeshed snapshot — pinning
    # it keeps the type info aligned with the pinned ``pyyaml==6.0.3``
    # rather than whatever typeshed snapshot the current pyright build
    # embeds. Co-grouped with ``pyyaml`` in ``.github/dependabot.yml`` so
    # the stub-vs-runtime version pair stays in lockstep.
    "types-pyyaml==6.0.12.20260408",
    # Schemathesis is intentionally NOT pinned ahead of consumption.
    # Pre-pinning a heavy dep "for when the feature lands" violates
    # ADR-011 ("no scaffolding before the feature lands"); the lockfile
    # would carry 22 transitives (hypothesis, requests, werkzeug, …) that
    # Dependabot scans weekly and CI re-resolves on every job, for zero
    # runtime/test value today. When LIP-E001-F002 lands, schemathesis
    # is added in that same PR alongside the fuzz tests.
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — docs not enforced at module level
    "ANN401",  # Any in **kwargs — needed for generic base classes
    "COM812",  # trailing comma — conflicts with formatter
    "ISC001",  # single-line implicit string concat — conflicts with formatter
    "FIX002",  # line contains TODO
    "TD003",   # missing issue link for TODO
    "UP046",   # Generic[T] syntax — TypeVar approach is clearer for complex generics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ANN",     # type annotations relaxed in tests
    "PLR2004", # magic values allowed in tests
    "PLC0415", # imports inside functions allowed in test fixtures
    "E501",    # long docstrings in tests
    "SLF001",  # tests legitimately inspect single-underscore internals of the unit under test
    "PT012",   # pytest.raises blocks may contain multiple statements when testing async context managers
    "EM101",   # string-literal exception args are fine in throwaway test scaffolding
]
"app/exceptions/_generated/**/*.py" = [
    "E501",    # generated code may have long lines
    "I001",    # generated imports may not be sorted
    "RUF022",  # generated __all__ may not be sorted
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath is intentionally not set: the project is installed editable via
# ``[tool.hatch.build.targets.wheel] packages = ["app"]`` (handled by ``uv
# sync``), so ``import app`` resolves through the install metadata in every
# invocation path (CI, pre-push, ``task``, direct ``uv run pytest``). Setting
# pythonpath = ["."] would shadow the editable install in some invocation
# paths and is "two ways to do the same thing" — drop it.
asyncio_mode = "auto"
# Session-scope keeps the suite under 4s on the current 391-test count by
# sharing one event loop across every test+fixture (per-test loops would
# add ~5-10s of construct/teardown overhead). The trade-off is that test
# isolation against state-leakage in async resources is weaker — the
# autouse ``_clear_structlog_contextvars`` fixture in tests/conftest.py
# is the canary that this risk is real and the ``filterwarnings`` block
# below converts unraised exceptions to test failures so leaks surface.
#
# The ``test_loop_scope`` line below MUST stay in lockstep with the
# fixture-loop scope above. pytest-asyncio 1.3.0 treats them as
# independent settings (per the cached docs at
# ~/.claude/context7-cache/.../schemathesis@*.md and the pytest-asyncio
# upstream changelog: ``asyncio_default_test_loop_scope`` defaults to
# ``function`` when unset). A function-scoped test loop alongside a
# session-scoped fixture loop triggers ``ScopeMismatch`` the first time
# a session-scoped async fixture is added (we have none today, but the
# coupling is invisible at edit time and a future addition would tip
# the suite over). Both at session scope keeps the invariant intact.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# --strict-markers/-config fails the run on unknown markers or unknown
# pytest config keys (catches typos that would otherwise no-op).
# filterwarnings turns first-party DeprecationWarnings into errors so
# upstream deprecations land as failed CI rather than silent log noise.
# Coverage flags (``--cov``, ``--cov-report``, ``--cov-fail-under``) are
# intentionally NOT in addopts — they live only on the ``check:coverage``
# Taskfile target so single-file iteration (``uv run pytest tests/unit/...``)
# stays fast. The 90% gate is enforced via ``task check:coverage`` in CI
# and pre-push; never bypass that path with a bare ``pytest`` invocation.
addopts = [
    "-q",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
# An xfail that unexpectedly passes is a hard failure (forces the author
# to remove the marker rather than leaving stale xfails in the suite).
xfail_strict = true
filterwarnings = [
    "error",
    # No hypothesis / schemathesis DeprecationWarning filters here — they
    # would swallow nothing today (the fuzz suite is dormant until
    # LIP-E001-F002 lands the inference router), and a blanket
    # ``ignore::DeprecationWarning:hypothesis`` would also mask the
    # 4.x→5.x rename signals fuzz-suite consumers need to see when the
    # bump lands. Re-add narrowly when LIP-E001-F002 lands a fuzzable
    # inference router.
    #
    # The ``PytestUnraisableExceptionWarning`` filter below is scoped to
    # the pytest module that emits it on asyncio-teardown so it does not
    # silence "coroutine was never awaited" bugs across the rest of the
    # suite.
    "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
    # anyio's memory streams emit ResourceWarnings on GC during pytest's
    # asyncio-teardown sweep; not a LIP bug. Narrowed to the dedicated
    # ``anyio.streams.memory`` submodule (the actual emitter) without a
    # message regex: that submodule only emits memory-stream-shaped
    # ResourceWarnings, so re-anchoring on the message text adds a
    # second condition that fail-opens the moment anyio rephrases the
    # string (e.g. to "MemoryObjectReceiveStream unclosed"). The module
    # narrowing keeps unrelated anyio modules (anyio.streams.tls /
    # anyio.from_thread) emitting normally, so a leaked AsyncClient
    # surfacing through anyio internals still surfaces.
    "ignore::ResourceWarning:anyio.streams.memory",
]
# No ``markers = [...]`` block — empty list is a no-op under
# ``--strict-markers`` (set in addopts above), which already rejects unknown
# markers. Re-add ``markers = ["slow: ..."]`` etc. only when a test actually
# applies the marker.
# Forbid test classes — CLAUDE.md sacred rule "Never write a test class".
# Suppresses class-based collection silently; the loud-fail backstop is
# the ``pytest_sessionstart`` hook in ``tests/conftest.py`` (the literal
# class name ``NoTestClassesAllowed`` is a sentinel no realistic test
# author writes).
python_classes = ["NoTestClassesAllowed"]
# Pin discovery patterns to match CLAUDE.md naming convention
# (`test_<unit>_<scenario>_<expected>`). Default pytest also picks up
# `*_test.py`, which would let a contributor land a misnamed file
# silently; pinning explicitly locks the convention mechanically.
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/exceptions/_generated/**",
    "**/__init__.py",
    # `python -m app` launcher — calls uvicorn.run; cannot be unit-tested
    # without spawning a subprocess. Drop from coverage so the gate
    # measures testable code only.
    "app/__main__.py",
]

[tool.coverage.report]
# Baseline measured at 95% on 2026-04-28 (LIP-E003-F001 landed). Set 5pt
# below to leave room for transient regressions during feature-dev
# without flapping the gate. Bump back up after each feature lands and
# stabilizes its coverage.
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # Protocol method bodies + ``...`` stubs.
    "\\.\\.\\.\\s*$",
    # Module entrypoint guards (re-bites if app/__main__.py is ever de-omitted).
    "if __name__ == .__main__.:",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
# ``include`` widened to cover ``tests/`` so the same strict-mode
# guarantees apply to test code (notably
# ``reportUnnecessaryTypeIgnoreComment`` — a stale ``# pyright: ignore``
# in a test was previously invisible to CI). Per-test-tree noise
# (private-internal access via ``_helper`` references, autouse fixture
# functions that pyright treats as unused, dict/list literal type
# inference at boundaries) is silenced via the
# ``executionEnvironments`` override below; the load-bearing strict
# checks (``reportUnnecessaryTypeIgnoreComment``,
# ``reportImplicitOverride``) remain on.
include = ["app", "tests"]
# Strict mode does NOT enable these by default. Each adds a real round-10
# guarantee:
# - reportUnnecessaryTypeIgnoreComment: a `# pyright: ignore[X]` that
#   becomes obsolete after a Pydantic/httpx upgrade silently rots; this
#   flips that into a build failure so the comment is removed alongside
#   the upstream fix.
# - reportImplicitOverride: every generated DomainError subclass uses
#   `@override`; enforcing it on hand-written code keeps the convention
#   uniform and surfaces a missing-decorator regression at type-check
#   time rather than at code-review time.
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitOverride = "error"

[[tool.pyright.executionEnvironments]]
# Per-tree relaxations for ``tests/``. These are the noise categories
# that fire on idiomatic pytest patterns (autouse fixtures pyright sees
# as unused, private helpers tests legitimately reach into, dict/list
# literal narrowing at the test boundary). The strict-mode flags
# ``reportUnnecessaryTypeIgnoreComment`` and ``reportImplicitOverride``
# remain enforced — those are the real upgrade-rot guards. Mirrors the
# spirit of the existing ``[tool.ruff.lint.per-file-ignores]`` block
# for ``tests/**/*.py``.
root = "tests"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportUnusedClass = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
